--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
     <header class="resume-header">
       <h1 class="res-name">Madison Putman</h1>
       <p class="contact">
-        <p>Email: <a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a> LinkedIn: <a href="https://www.linkedin.com/in/madison-putman" target="_blank" rel="noopener">linkedin.com/in/madison-putman </p>
+        <p>Email: putmanm@email.sc.eduLinkedIn:linkedin.com/in/madison-putman </p>
         <a class="download" href="/mnt/data/Putman_Computer Science_Resume (12).pdf" target="_blank" rel="noopener">Download PDF</a>
       </p>
     </header>
