--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
                     </a>
                     </div>
                      <div class="project-body">
-                    <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
-                     <h3>Algorithmic Design Zoo Managment Project</h3>
-                    </a>
-                        <p>This is a zoo management system that allows the visitor to go to different exhibits and learn about a variety of animals. </p>
+                    <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement"><h3>Algorithmic Design Zoo Managment Project</h3> </a>
+                    <p>This is a zoo management system that allows the visitor to go to different exhibits and learn about a variety of animals. </p>
                     </div>
                 </section>
 
