--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <div class="about">
                 <h2>About me</h2>
                 <img src="ProfessionalPic.JPG" class="about-image">
-                <p>I will strive to use my skills, education, and servant leadership to provide protection and innovation through technology and everyday conduct; I want Jesus to be seen in all I do.</p>
+                <p>I will strive to use my skills, education, and servant leadership to provide protection<br> 
+                and innovation through technology and everyday conduct; I want Jesus to be seen in all I do.</p>
             </div>
             <div class="skills">
                 <h2>Skills</h2>
