--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><img src="SingleSentenceStatement.png"></a>
                     </div>
                     <div class="project-body">
-                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><h3>Problem Statement</h3>
+                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><h3>Problem Statement</h3></a>
                     <p>Because Chick-fil-A does not process GrubHub orders until customers check in, students experience long delays that make preordering ineffective and disrupt their class schedules.</p>
                     </div>
                 </section>
